// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dotcom-ui-shell/src/components/LinkedData renders the base site schema 1`] = `
<script
  dangerouslySetInnerHTML={
    Object {
      "__html": "{\\"@context\\":\\"http://schema.org\\",\\"@type\\":\\"WebSite\\",\\"name\\":\\"Financial Times\\",\\"alternateName\\":\\"FT.com\\",\\"url\\":\\"http://www.ft.com\\"}",
    }
  }
  type="application/ld+json"
/>
`;

exports[`dotcom-ui-shell/src/components/LinkedData renders the given additional schemas 1`] = `
Array [
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"http://schema.org\\",\\"@type\\":\\"Person\\",\\"name\\":\\"John Doe\\",\\"email\\":\\"john.doe@example.com\\",\\"netWorth\\":\\"1 trillion\\"}",
      }
    }
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"http://schema.org\\",\\"@type\\":\\"Organization\\",\\"url\\":\\"https://www.ft.com\\",\\"address\\":\\"Bracken House, EC4M 9JA\\"}",
      }
    }
    type="application/ld+json"
  />,
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"@context\\":\\"http://schema.org\\",\\"@type\\":\\"WebSite\\",\\"name\\":\\"Financial Times\\",\\"alternateName\\":\\"FT.com\\",\\"url\\":\\"http://www.ft.com\\"}",
      }
    }
    type="application/ld+json"
  />,
]
`;
